<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity"
    android:id="@+id/activity_name">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margMid"
        android:text="@string/textAddNameEvent"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/txtFieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margMin"
        android:hint="@string/hintAddNameEvent"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margMid"
        android:layout_marginStart="@dimen/margMid"
        android:text="@string/textAddAddressEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldName" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/txtFieldSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margMin"
        android:hint="@string/hintAddAddressEvent"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldSite" />

    <fragment
        android:id="@+id/mapViewEvent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margHeightMap"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margMin"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNewEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewSearch"
        tools:context=".NameActivity" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margMin"
        android:text="@string/addNewEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>