<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateActivity">

    <DatePicker
        android:id="@+id/viewDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.18"
        android:scaleY="1.18"
        android:translationZ="2dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/viewTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/viewDatePicker"
        app:layout_constraintStart_toStartOf="@+id/viewDatePicker"
        app:layout_constraintTop_toTopOf="@+id/viewDatePicker">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/margMin"
            android:text="@string/ok"
            android:visibility="invisible"
            tools:ignore="RtlHardcoded" />

    </TimePicker>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="@dimen/margMax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margMin"
        android:enabled="false"
        android:text="@string/toContinue"
        app:layout_constraintBottom_toTopOf="@+id/btnViewCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margMin"
        android:enabled="false"
        android:text="@string/chooseAnother"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnViewContinue"
        app:layout_constraintStart_toStartOf="@+id/btnViewContinue" />
</androidx.constraintlayout.widget.ConstraintLayout>